--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+bmp280==0.0.4
 certifi==2024.2.2
 charset-normalizer==3.3.2
+i2cdevice==1.0.0
 idna==3.6
 netifaces==0.11.0
 pillow==10.2.0
@@ -9,6 +11,7 @@ qrcode==7.4.2
 requests==2.31.0
 RPi.GPIO==0.7.1
 smbus==1.1.post2
+smbus2==0.4.3
 spidev==3.6
 typing_extensions==4.10.0
 urllib3==2.2.1
