--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+Adafruit-Blinka==8.36.0
+adafruit-circuitpython-bme280==2.6.24
+adafruit-circuitpython-bmp280==3.3.2
+adafruit-circuitpython-busdevice==5.2.6
+adafruit-circuitpython-connectionmanager==1.0.1
+adafruit-circuitpython-register==1.9.18
+adafruit-circuitpython-requests==3.2.2
+adafruit-circuitpython-typing==1.10.3
+Adafruit-PlatformDetect==3.62.0
+Adafruit-PureIO==1.1.11
 bmp280==0.0.4
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -6,12 +16,17 @@ idna==3.6
 netifaces==0.11.0
 pillow==10.2.0
 psutil==5.9.8
+pyftdi==0.55.0
 pypng==0.20220715.0
+pyserial==3.5
+pyusb==1.2.1
 qrcode==7.4.2
 requests==2.31.0
+rpi-ws281x==5.0.0
 RPi.GPIO==0.7.1
 smbus==1.1.post2
 smbus2==0.4.3
 spidev==3.6
+sysv-ipc==1.1.0
 typing_extensions==4.10.0
 urllib3==2.2.1
