--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ adafruit-circuitpython-bme280==2.6.24
 adafruit-circuitpython-bmp280==3.3.2
 adafruit-circuitpython-busdevice==5.2.6
 adafruit-circuitpython-connectionmanager==1.0.1
+adafruit-circuitpython-dht==4.0.4
 adafruit-circuitpython-register==1.9.18
 adafruit-circuitpython-requests==3.2.2
 adafruit-circuitpython-typing==1.10.3
